<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_reload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_print"
        android:icon="@drawable/ic_print"
        android:title="@string/menu_print"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_printer_driver"
        android:icon="@drawable/ic_print"
        android:title="@string/menu_printer_driver"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/menu_exit"
        app:showAsAction="never" />

</menu>
